<resources>
    <string name="app_name">diario-diabete</string>
    <string name="LoginActivity_title">Diaro del Diabete</string>

    <string name="activityDataReaderGlicemia">Glicemia (mg/dl):</string>
    <string name="activityDataReaderGlicemiaInput">0</string>
    <string name="activityDataReaderSliderNo">NO</string>
    <string name="activityDataReaderSliderYes">SI</string>
    <string name="activityDataReaderFasting">Digiuno:</string>
    <string name="activityDataReaderEatenBy">Mangiato da 2h:</string>
    <string name="actvityDataReaderTags">Tags</string>
    <string name="activityDataReaderCreate">Crea</string>
    <string name="readings_adapter_eatenby2h">Mangiato da 2h:</string>
    <string name="readings_adapter_fasting">Digiuno:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtGenericError">Oops. An error occurred. Please retry.</string>
</resources>
