<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="?appColorWhite"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activityDataReaderHeaderCl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activityDataReaderHeaderHeight"
            android:background="?appColorWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/activityDataReaderDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/activityDataReaderTimeButtonsHeight"
                android:layout_marginTop="@dimen/main16"
                android:backgroundTint="?appColorWhite"
                android:drawableStart="@drawable/ic_calendar"
                android:fontFamily="@font/product_sans_bold"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="?appColorGray"
                android:textSize="@dimen/activityDataReaderButtonTimePickerTextSize"
                android:drawablePadding="@dimen/main16"
                app:layout_constraintEnd_toStartOf="@+id/activityDataReaderTimePicker"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/activityDataReaderTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/activityDataReaderTimeButtonsHeight"
                android:layout_marginTop="@dimen/main16"
                android:backgroundTint="?appColorGray"
                android:drawableStart="@drawable/ic_clock"
                android:drawablePadding="@dimen/main16"
                android:fontFamily="@font/product_sans_bold"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="?appColorGray"
                android:textSize="@dimen/activityDataReaderButtonTimePickerTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/activityDataReaderDatePicker"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/activityDataReaderLineView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F4F4F4"
            app:layout_constraintTop_toBottomOf="@id/activityDataReaderHeaderCl"
            tools:layout_editor_absoluteX="16dp" />

        <View
            android:id="@+id/activityDataReaderLineViewBottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="244dp"
            android:background="#F4F4F4"
            app:layout_constraintTop_toBottomOf="@id/activityDataReaderHeaderCl"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activityDataReaderTitleReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activityDataReaderMT"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/activityDataReaderGlicemia"
            android:textColor="?appColorBlack"
            android:textSize="@dimen/tileTextSize"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.638"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityDataReaderLineView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/activityDataReaderInputRead"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activityDataReaderMT"
            android:layout_marginStart="18dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_white_button"
            android:digits="0123456789."
            android:fontFamily="@font/product_sans_bold"
            android:gravity="start|center_vertical"
            android:hint="@string/activityDataReaderGlicemiaInput"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:minLines="1"
            android:paddingStart="@dimen/activityDataReaderInputPadding"
            android:paddingEnd="@dimen/activityDataReaderInputPadding"
            android:textColor="?appColorDarkAzure"
            android:textColorHint="?appColorDarkAzure"
            android:textSize="@dimen/activityDataReaderInputTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.203"
            app:layout_constraintStart_toEndOf="@+id/activityDataReaderTitleReading"
            app:layout_constraintTop_toBottomOf="@+id/activityDataReaderLineView" />

        <com.github.angads25.toggle.widget.LabeledSwitch
            android:id="@+id/activityDataReaderSwitchFasting"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activityDataReaderSliderHeight"
            android:layout_marginStart="18dp"
            android:layout_marginTop="@dimen/activityDataReaderMT"
            android:textSize="@dimen/activityDataReaderSliderTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toEndOf="@+id/activityDataReaderTitleEatingFrom3"
            app:layout_constraintTop_toBottomOf="@+id/activityDataReaderTitleReading"
            app:colorOn="?appColorDarkAzure"
            app:colorOff="?appColorWhite"
            app:colorBorder='?appColorDarkAzure'
            app:on="false"
            app:textOff="@string/activityDataReaderSliderNo"
            app:textOn="@string/activityDataReaderSliderYes" />

        <com.github.angads25.toggle.widget.LabeledSwitch
            android:id="@+id/activityDataReaderSwitchEatenBy"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activityDataReaderSliderHeight"
            android:layout_marginStart="18dp"
            android:layout_marginTop="@dimen/activityDataReaderMT"
            android:layout_marginEnd="107dp"
            android:textSize="@dimen/activityDataReaderSliderTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.771"
            app:layout_constraintStart_toEndOf="@+id/activityDataReaderTitleEatingFrom"
            app:layout_constraintTop_toBottomOf="@+id/activityDataReaderSwitchFasting"
            app:colorOn="?appColorDarkAzure"
            app:colorOff="?appColorWhite"
            app:colorBorder='?appColorDarkAzure'
            app:on="false"
            app:textOff="@string/activityDataReaderSliderNo"
            app:textOn="@string/activityDataReaderSliderYes"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activityDataReaderTitleEatingFrom3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activityDataReaderMT"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/activityDataReaderFasting"
            android:textColor="?appColorBlack"
            android:textSize="@dimen/tileTextSize"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.821"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityDataReaderTitleReading" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activityDataReaderTitleEatingFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="@dimen/activityDataReaderMT"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/activityDataReaderEatenBy"
            android:textColor="?appColorBlack"
            android:textSize="@dimen/tileTextSize"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.623"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityDataReaderSwitchFasting" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activityDataReaderTitleEatingFrom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activityDataReaderMT"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/actvityDataReaderTags"
            android:textColor="?appColorBlack"
            android:textSize="@dimen/tileTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityDataReaderLineViewBottom" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activityDataReaderRVTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activityDataReaderMT"
            android:orientation="horizontal"

            android:layout_marginLeft="16dp"
            android:scrollbars="none"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityDataReaderTitleEatingFrom2">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activityDataReaderConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activityDataReaderInputMT"
            android:background="@drawable/background_green_button"
            android:elevation="0dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/activityDataReaderCreate"
            android:textSize="@dimen/activityDataReaderButtonsFastingTextSize"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activityDataReaderTitleEatingFrom2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
